infrastructure/document-portal-cf.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Prod Assistant ECS Fargate Cluster with ECR Repository

Parameters:
  ECRRepositoryName:
    Type: String
    Default: prod-assistant

  ImageUrl:
    Type: String
    Description: "700890257528.dkr.ecr.us-east-1.amazonaws.com/prod-assistant"

Resources:

  ### VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ECS-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  ### ECR Repository
  ProdAssistantECR:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Ref ECRRepositoryName
      ImageScanningConfiguration:
        ScanOnPush: true
      ImageTagMutability: MUTABLE

  ### ECS Cluster
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: prod-assistant-cluster

  ### CloudWatch Logs
  ECSLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: prod-assistant
      RetentionInDays: 7

  ### ECS Task Execution Role
  ECSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: ecsTaskExecutionRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  ### ECS Security Group
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Prod Assistant ECS Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8001
          ToPort: 8001
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  ### ECS Task Definition
  ECSTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: prod-assistant
      Cpu: "1024"
      Memory: "4096"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !GetAtt ECSExecutionRole.Arn

      ContainerDefinitions:
        - Name: prod-assistant

          Image: !Ref ImageUrl

          Essential: true

          PortMappings:
            - ContainerPort: 8001
              Protocol: tcp

          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: /ecs/prod-assistant
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs

          Environment:
            - Name: LLM_PROVIDER
              Value: groq

          Secrets:
            - Name: GROQ_API_KEY
              ValueFrom: "arn:aws:secretsmanager:us-east-1:700890257528:secret:apikey-0C7LA"

            - Name: ASTRA_DB_API_ENDPOINT
              ValueFrom: "arn:aws:secretsmanager:us-east-1:700890257528:secret:prod-assistant/astradb-8HL7z1:ASTRA_DB_API_ENDPOINT::"

            - Name: ASTRA_DB_APPLICATION_TOKEN
              ValueFrom: "arn:aws:secretsmanager:us-east-1:700890257528:secret:prod-assistant/astradb-8HL7z1:ASTRA_DB_APPLICATION_TOKEN::"

            - Name: ASTRA_DB_KEYSPACE
              ValueFrom: "arn:aws:secretsmanager:us-east-1:700890257528:secret:prod-assistant/astradb-8HL7z1:ASTRA_DB_KEYSPACE::"

  ### ECS Service
  ECSService:
    Type: AWS::ECS::Service
    DependsOn:
      - AttachGateway
    Properties:
      ServiceName: prod-assistant-service
      Cluster: !Ref ECSCluster
      LaunchType: FARGATE
      DesiredCount: 1

      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED

          Subnets:
            - !Ref PublicSubnet1
            - !Ref PublicSubnet2

          SecurityGroups:
            - !Ref ECSSecurityGroup

      TaskDefinition: !Ref ECSTaskDefinition

Outputs:

  ECRRepositoryUri:
    Description: URI of the ECR Repository
    Value: !GetAtt ProdAssistantECR.RepositoryUri

  ECSClusterName:
    Description: ECS Cluster Name
    Value: !Ref ECSCluster

  ECSServiceName:
    Description: ECS Service Name
    Value: !Ref ECSService

  TaskDefinitionArn:
    Description: ECS Task Definition
    Value: !Ref ECSTaskDefinition
